--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.0",
     "gatsby": "^4.1.3",
+    "gatsby-plugin-postcss": "^5.1.0",
+    "postcss": "^8.3.11",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
