--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "autoprefixer": "^10.4.0",
     "gatsby": "^4.1.3",
     "gatsby-plugin-postcss": "^5.1.0",
+    "gatsby-source-filesystem": "^4.1.2",
+    "gatsby-transformer-remark": "^5.1.3",
     "postcss": "^8.3.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
