--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
+    "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^4.1.3",
+    "gatsby-plugin-image": "^2.1.3",
     "gatsby-plugin-postcss": "^5.1.0",
-    "gatsby-source-filesystem": "^4.1.2",
+    "gatsby-plugin-sharp": "^4.1.4",
+    "gatsby-plugin-styled-components": "^5.2.0",
+    "gatsby-source-filesystem": "^4.1.3",
     "gatsby-transformer-remark": "^5.1.3",
+    "gatsby-transformer-sharp": "^4.1.0",
     "postcss": "^8.3.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
