--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.0",
     "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^4.1.3",
+    "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-image": "^2.1.3",
     "gatsby-plugin-postcss": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.4",
@@ -24,6 +25,7 @@
     "gatsby-source-filesystem": "^4.1.3",
     "gatsby-transformer-remark": "^5.1.3",
     "gatsby-transformer-sharp": "^4.1.0",
+    "gbimage-bridge": "^0.2.1",
     "postcss": "^8.3.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
