--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.3.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-rough-notation": "^1.0.2",
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.19"
   },
