--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-background-image": "^1.6.0",
     "gatsby-plugin-image": "^2.1.3",
     "gatsby-plugin-postcss": "^5.1.0",
+    "gatsby-plugin-react-helmet": "^5.8.0",
     "gatsby-plugin-sharp": "^4.1.4",
     "gatsby-plugin-styled-components": "^5.2.0",
     "gatsby-source-filesystem": "^4.1.3",
@@ -29,6 +30,7 @@
     "postcss": "^8.3.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-rough-notation": "^1.0.2",
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.19"
