--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.1",
     "react-parallax": "^3.3.0",
     "react-rough-notation": "^1.0.2",
+    "react-scroll-motion": "^0.2.6",
     "styled-components": "^5.3.3",
     "tailwindcss": "^2.2.19"
   },
