--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-transformer-remark": "^5.1.3",
     "gatsby-transformer-sharp": "^4.1.0",
     "gbimage-bridge": "^0.2.1",
+    "howler": "^2.2.3",
     "postcss": "^8.3.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -33,7 +34,8 @@
     "react-rough-notation": "^1.0.2",
     "react-scroll-motion": "^0.2.6",
     "styled-components": "^5.3.3",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^2.2.19",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
