--- a/package.json
+++ b/package.json
@@ -15,26 +15,30 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
-    "babel-plugin-styled-components": "^1.13.3",
-    "gatsby": "^4.1.3",
+    "babel-plugin-styled-components": "^2.0.7",
+    "gatsby": "^5.5.0",
     "gatsby-background-image": "^1.6.0",
-    "gatsby-plugin-image": "^2.1.3",
-    "gatsby-plugin-postcss": "^5.1.0",
-    "gatsby-plugin-sharp": "^4.1.4",
-    "gatsby-plugin-styled-components": "^5.2.0",
-    "gatsby-source-filesystem": "^4.1.3",
-    "gatsby-transformer-remark": "^5.1.3",
-    "gatsby-transformer-sharp": "^4.1.0",
+    "gatsby-plugin-image": "^3.5.0",
+    "gatsby-plugin-manifest": "^5.5.0",
+    "gatsby-plugin-postcss": "^6.5.0",
+    "gatsby-plugin-sass": "^6.5.0",
+    "gatsby-plugin-sharp": "^5.5.0",
+    "gatsby-plugin-styled-components": "^6.5.0",
+    "gatsby-source-filesystem": "^5.5.0",
+    "gatsby-transformer-remark": "^6.5.0",
+    "gatsby-transformer-sharp": "^5.5.0",
     "gbimage-bridge": "^0.2.1",
     "howler": "^2.2.3",
     "postcss": "^8.3.11",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-parallax": "^3.3.0",
     "react-rough-notation": "^1.0.2",
     "react-scroll-motion": "^0.3.2",
+    "sass": "^1.57.1",
     "styled-components": "^5.3.3",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.2.4",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
